--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url("background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.countdown {
+  color: #bbf78f;
+  font-family: "Arial Black", Gadget, sans-serif;
+  font-size: 36px;
+  text-shadow: black 2px 2px;
+}
+
+.count {
+  font-size: 120px;
+}
+
+div {
+  margin: 0;
+  padding: 0;
 }
