--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-  background-image: url("background.jpg");
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  height: 100vh;
+  background: url("background.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .countdown {
